# blockchain-indexer

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.yml  config.yml.example  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
block_checker/: Dockerfile  block_checker.py  requirements.txt
block_processor/: Dockerfile  block_processor.py  requirements.txt
block_processor/src/: consumer.py  database.py  main.py  processor.py  schemas.py  utils.py
block_processor/src/db/: repository.py  schema.py
chains/: arbitrum.yml  cronos_zkevm.yml  ethereum.yml  zksync.yml  zksync_sepolia.yml
data2/zksync/blocks/: blocks_1451.json  blocks_1535.json  blocks_2030.json  blocks_28679967.json  blocks_35876713.json  blocks_4239.json  blocks_8958.json  blocks_9073.json  blocks_9239.json  blocks_9416.json
data2/zksync/receipts/: receipts_1451.json  receipts_1535.json  receipts_2030.json  receipts_28679967.json  receipts_35876713.json  receipts_4239.json  receipts_8958.json  receipts_9073.json  receipts_9239.json  receipts_9416.json
deployment/helm-charts/charts/blockchain-indexer/: Chart.yaml  values.yaml
deployment/terraform/modules/gce/: variables.tf
monitoring/: docker-compose.yml
monitoring/grafana/provisioning/dashboards/: indexer.json
monitoring/prometheus/: prometheus.yml
observability/: docker-compose.yml
observability/grafana/provisioning/dashboards/: indexer.json
observability/prometheus/: prometheus.yml
resources/web3_response/: arbitrum.txt  ethereum.txt  optimism.txt  zksync.txt
rust/: Cargo.toml  config.yml.example  docker-compose.yml
rust/src/: indexer.rs  main.rs  metrics.rs  utils.rs
rust/src/indexer/: indexer.rs  mod.rs
rust/src/indexer/rpc/: blocks.rs  mod.rs  receipts.rs  traces.rs
rust/src/indexer/transformations/: blocks.rs  logs.rs  mod.rs  traces.rs  transactions.rs
rust/src/models/: common.rs  mod.rs
rust/src/models/datasets/: blocks.rs  logs.rs  traces.rs  transactions.rs
rust/src/models/indexed/: blocks.rs  logs.rs  mod.rs  traces.rs  transactions.rs
rust/src/models/rpc/: blocks.rs  receipts.rs  traces.rs
rust/src/observability/: metrics.rs
rust/src/parsers/: blocks.rs  receipts.rs
rust/src/storage/: mod.rs
rust/src/storage/bigquery/: mod.rs  schema.rs
rust/src/types/: blocks.rs  receipts.rs  transactions.rs
rust/src/utils/: mod.rs  retry.rs
src/: data_manager.py  indexer.py  lib.rs  main.py  main.rs  metrics.py  metrics.rs  rpc_types.py  test.py  utils.py  wss.py
src/data_manager/: __init__.py  base.py  bigquery.py  parquet.py  utils.py
src/data_types/: __init__.py  blocks.py  logs.py  transactions.py
src/indexer/: block_processor.rs  mod.rs
src/indexer/rpc/: blocks.rs  mod.rs  receipts.rs  traces.rs
src/indexer/transformations/: blocks.rs  logs.rs  traces.rs  transactions.rs
src/models/: common.rs  errors.rs  mod.rs
src/models/datasets/: blocks.rs  logs.rs  traces.rs  transactions.rs
src/parsers/: __init__.py  blocks.py  logs.py  transactions.py
src/rpc_types/: __init__.py  blocks.py  logs.py  transactions.py
src/storage/: mod.rs
src/storage/bigquery/: mod.rs  schema.rs
src/utils/: mod.rs  rate_limiter.rs  retry.rs  state_tracker.py  utils.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
tests/: indexing.rs
