[package]
name = "blockchain-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]

alloy-consensus = "0.7.2"
alloy-eips = "0.7.2"
alloy-network = "0.7.2"
alloy-primitives = "0.8.14"
alloy-provider = { version = "0.7.2", features = ["debug-api"] }
alloy-rpc-types = "0.11.0"
alloy-rpc-types-debug = "0.7.2"
alloy-rpc-types-eth = "0.7.2"
alloy-rpc-types-trace = "0.7.2"
alloy-serde = "0.9.2"
alloy-transport = "0.7.2"

anyhow = "1.0.95"
axum = "0.8.1"
chrono = { version = "0.4.38", features = ["serde"] }
eyre = "0.6.12"
fastrand = "2.3.0"
google-cloud-bigquery = "0.14.0"
once_cell = "1.20.2"
opentelemetry = "0.27.1"
opentelemetry-prometheus = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
prometheus = "0.13.4"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.11"
tokio = { version = "1.41.0", features = ["full", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
