[package]
name = "blockchain-indexer"
version = "0.1.1"
edition = "2021"

[profile.release]
debug = true

[dependencies]

alloy-consensus = "1.0.11"
alloy-eips = "1.0.11"
alloy-network = "1.0.11"
alloy-primitives = "1.0.11"
alloy-provider = { version = "1.0.11", features = ["debug-api", "ws"] }
alloy-rpc-types = "1.0.11"
alloy-rpc-types-debug = "1.0.11"
alloy-rpc-types-eth = "1.0.11"
alloy-rpc-types-trace = "1.0.11"
alloy-serde = "1.0.11"
alloy-rpc-client = "1.0.11"
alloy-transport = "1.0.11"
alloy-transport-http = "1.0.11"

anyhow = "1.0.95"
axum = { version = "0.8.1", features = ["macros"] }
chrono = { version = "=0.4.38", features = ["serde"] }
config = { version = "0.15.11", features = ["yaml"] }
fastrand = "2.3.0"
futures = "0.3.31"
google-cloud-bigquery = { version = "0.14.0", features = ["auth"] }
google-cloud-gax = "0.19.2"
google-cloud-auth = "0.17"
http = "1.3.1"
once_cell = "1.20.2"
opentelemetry = "0.27.1"
opentelemetry-prometheus = "0.27.0"
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
prometheus = "0.13.4"
serde = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.11"
tokio = { version = "1.41.0", features = ["full", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5.4"
reqwest = "0.12.20"
