[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-consensus = "0.7.2"
# alloy
alloy-eips = "0.7.2"
alloy-network = "0.7.2"
alloy-primitives = "0.8.14"
alloy-provider = { version = "0.7.2", features = ["debug-api"] }
alloy-rpc-types-debug = "0.7.2"
alloy-rpc-types-eth = "0.7.2"
alloy-rpc-types-trace = "0.7.2"
alloy-transport = "0.7.2"

chrono = { version = "0.4.38", features = ["serde"] }
eyre = "0.6.12"
google-cloud-bigquery = "0.14.0"
serde = "1.0.216"
serde_json = "1.0.133"
tokio = { version = "1.41.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
